--- a/angular.json
+++ b/angular.json
@@ -24,8 +24,7 @@
             ],
             "styles": [
               "src/styles.css",
-              "src/styles.scss",
-              "node_modules/ngx-toastr/toastr.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
