--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "^3.0.0",
     "core-js": "^2.5.4",
     "jwt-decode": "^2.2.0",
+    "ng2-smooth-scroll": "^1.0.1",
     "ngx-bootstrap": "^3.0.1",
     "ngx-spinner": "^6.0.0",
     "ngx-toastr": "^8.10.0",
