--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "@angular/router": "^6.1.0",
     "bcrypt": "^3.0.0",
     "core-js": "^2.5.4",
+    "intersection-observer": "^0.5.0",
     "jwt-decode": "^2.2.0",
+    "ng-in-viewport": "^6.0.2",
     "ng2-smooth-scroll": "^1.0.1",
     "ngx-bootstrap": "^3.0.1",
+    "ngx-page-scroll": "^5.0.0",
+    "ngx-perfect-scrollbar": "^6.3.0",
+    "ngx-quill": "^3.4.0",
     "ngx-spinner": "^6.0.0",
     "ngx-toastr": "^8.10.0",
     "path": "^0.12.7",
