--- a/angular.json
+++ b/angular.json
@@ -24,8 +24,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "src/styles.scss
-            ]
+              "src/styles.scss"
+            ],
             "scripts": []
           },
           "configurations": {
