--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,11 @@
             ],
             "styles": [
               "src/styles.css",
+              "./node_modules/quill/dist/quill.snow.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+            ]
           },
           "configurations": {
             "production": {
