--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ng2-smooth-scroll": "^1.0.1",
     "ngx-bootstrap": "^3.0.1",
     "ngx-masonry": "^1.1.2",
+    "ngx-modal-dialog": "^3.0.0",
     "ngx-page-scroll": "^5.0.0",
     "ngx-quill": "^3.4.0",
     "ngx-spinner": "^6.0.0",
