--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@ng-select/ng-select": "^2.10.1",
+    "@ngrx/effects": "^6.1.0",
     "@ngrx/store": "^6.1.0",
     "bcrypt": "^3.0.0",
     "core-js": "^2.5.4",
