--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@google-cloud/storage": "^2.0.3",
     "@ng-select/ng-select": "^2.10.1",
     "@ngrx/effects": "^6.1.0",
     "@ngrx/store": "^6.1.0",
     "bcrypt": "^3.0.0",
     "core-js": "^2.5.4",
+    "firebase": "^5.5.3",
     "intersection-observer": "^0.5.0",
     "jwt-decode": "^2.2.0",
     "ng-in-viewport": "^6.0.2",
