--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "bcrypt": "^3.0.0",
     "core-js": "^2.5.4",
     "firebase": "^5.5.3",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "intersection-observer": "^0.5.0",
     "jwt-decode": "^2.2.0",
     "ng-in-viewport": "^6.0.2",
     "ng2-smooth-scroll": "^1.0.1",
     "ngx-bootstrap": "^3.0.1",
+    "ngx-gallery": "^5.7.0",
     "ngx-masonry": "^1.1.2",
     "ngx-page-scroll": "^5.0.0",
     "ngx-quill": "^3.4.0",
