--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-select/ng-select": "^2.10.1",
     "@ngrx/effects": "^6.1.0",
     "@ngrx/store": "^6.1.0",
+    "@w11k/ngx-componentdestroyed": "^4.0.1",
     "bcrypt": "^3.0.0",
     "core-js": "^2.5.4",
     "firebase": "^5.5.3",
