--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "firebase": "^5.5.3",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "html2canvas": "^1.0.0-alpha.12",
     "intersection-observer": "^0.5.0",
+    "jspdf": "^1.4.1",
     "jwt-decode": "^2.2.0",
     "ng-in-viewport": "^6.0.2",
     "ng2-smooth-scroll": "^1.0.1",
