--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ngx-quill": "^3.4.0",
     "ngx-spinner": "^6.0.0",
     "ngx-toastr": "^8.10.0",
+    "ngx-tooltip": "0.0.9",
     "path": "^0.12.7",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
