--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ngx-gallery": "^5.7.0",
     "ngx-masonry": "^1.1.2",
     "ngx-page-scroll": "^5.0.0",
+    "ngx-pagination": "^3.2.1",
     "ngx-quill": "^3.4.0",
     "ngx-spinner": "^6.0.0",
     "ngx-toastr": "^8.10.0",
