--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ngx-spinner": "^6.0.0",
     "ngx-toastr": "^8.10.0",
     "ngx-tooltip": "0.0.9",
+    "ngx-treeview": "^6.0.2",
     "path": "^0.12.7",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
