--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/effects": "^6.1.0",
     "@ngrx/store": "^6.1.0",
     "@w11k/ngx-componentdestroyed": "^4.0.1",
+    "angular-tree-component": "^8.0.2",
     "bcrypt": "^3.0.0",
     "core-js": "^2.5.4",
     "firebase": "^5.5.3",
@@ -40,7 +41,6 @@
     "ngx-gallery": "^5.7.0",
     "ngx-masonry": "^1.1.2",
     "ngx-page-scroll": "^5.0.0",
-    "ngx-pagination": "^3.2.1",
     "ngx-quill": "^3.4.0",
     "ngx-spinner": "^6.0.0",
     "ngx-toastr": "^8.10.0",
