Make product details page, fetch products and implement breadcrumbs for admin page.

--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "ng-in-viewport": "^6.0.2",
     "ng2-smooth-scroll": "^1.0.1",
     "ngx-bootstrap": "^3.0.1",
+    "ngx-breadcrumbs": "0.0.3",
+    "ngx-breadcrumbs-rxjs6": "^1.0.2",
     "ngx-gallery": "^5.7.0",
     "ngx-masonry": "^1.1.2",
     "ngx-page-scroll": "^5.0.0",
+    "ngx-pagination": "^3.2.1",
     "ngx-quill": "^3.4.0",
     "ngx-spinner": "^6.0.0",
     "ngx-toastr": "^8.10.0",
