Refactor admin style.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.1.0",
+    "@angular/cdk": "^7.2.0",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
@@ -37,13 +38,13 @@
     "ng-in-viewport": "^6.0.2",
     "ng2-smooth-scroll": "^1.0.1",
     "ngx-bootstrap": "^3.0.1",
-    "ngx-breadcrumbs": "0.0.3",
-    "ngx-breadcrumbs-rxjs6": "^1.0.2",
     "ngx-gallery": "^5.7.0",
     "ngx-masonry": "^1.1.2",
     "ngx-page-scroll": "^5.0.0",
     "ngx-pagination": "^3.2.1",
+    "ngx-perfect-scrollbar": "^7.1.0",
     "ngx-quill": "^3.4.0",
+    "ngx-scrollbar": "^4.1.1",
     "ngx-spinner": "^6.0.0",
     "ngx-toastr": "^8.10.0",
     "ngx-tooltip": "0.0.9",
